<resources>
    <string name="app_name">Reparto Nantia</string>
    <string name="title_activity_login">Reparto Nantia</string>

    <!-- Strings related to login -->
    <string name="login_nombre_usuario">Nombre Usuario</string>
    <string name="login_contrasenia">Contraseña</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="title_activity_producto">ProductoActivity</string>

    <!-- Strings related to Main Menu -->
    <string name="menu_clientes">Clientes</string>
    <string name="menu_reparto">Reparto</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_listas_de_precios">Listas de Precios</string>
    <string name="menu_stock">Stock</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_vendedores">Vendedores</string>

    <!-- Strings related to producto -->
    <string name="producto_no_retornable">No Retornable</string>
    <string name="producto_retornable">Retornable</string>
    <string name="producto_nombre">Nombre:</string>
    <string name="envases">Envases</string>
    <string name="producto_presentacion">Presentación:</string>
    <string name="producto_descripcion">Descripción:</string>

    <!-- Strings related to cliente -->
    <string name="cliente_CI">C.I.</string>
    <string name="cliente_RUT">RUT</string>
    <string name="cliente_telefono">Tel.</string>
    <string name="cliente_celular">Móvil</string>
    <string name="cliente_dias_visita">Días de visita</string>
    <string name="cliente_direccion">Dirección</string>
    <string name="cliente_saldo">Saldo</string>
    <string name="cliente_envases_prestamo">Envases a prestamo</string>
    <string name="cliente_envase_prestamo">Envase a prestamo</string>
    <string name="cliente_cantidad">Cantidad</string>
    <string name="cliente_mail">Mail</string>
    <string name="cliente_lista_precios">Lista de Precios</string>
    <string name="cliente_lista_precios_actual">Lista de Precios Actual:</string>
    <string name="cliente_observaciones">Observaciones</string>
    <string name="cliente_nombre">Nombre</string>
    <string name="cliente_apellido">Apellido</string>
    <string name="cliente_nro_CI">Numero de C.I.</string>
    <string name="cliente_nro_RUT">Numero de RUT</string>
    <string name="cliente_fecha_nac">Fecha de Nacimiento</string>
    <string name="cliente_tel_1">Telefono 1</string>
    <string name="cliente_tel_2">Telefono 2</string>
    <string name="cliente_dir_mail">Dirección de correo electronico</string>
    <string name="cliente_comentarios">Comentarios...</string>
    <string name="cliente_ciudad">Ciudad</string>
    <string name="cliente_departamento">Departamento</string>
    <string name="cliente_cp">Código Postal</string>
    <string name="cliente_dias">Días</string>
    <string name="cliente_empresa_nombre_fantasia">Nombre fantasía</string>
    <string name="cliente_empresa_nombre_legal">Nombre Legal</string>
    <string name="cliente_nuevo">Cliente Nuevo</string>
    <string name="cliente_eliminar_env_prestamo">Eliminar envase a prestamo</string>
    <string name="cliente_eliminar_env_prestamo_desc">Confirme que desea eliminar envase a prestamo</string>

    <!-- Strings related to cliente -->
    <string name="lista_precios_no_lista">No se encontraron listas de precios activas.</string>

    <!-- Strings related to Reparto -->
    <string name="reparto_no_cargado">No hay ningun reparto cargado!</string>
    <string name="reparto_comenzar">Comenzar Reparto</string>
    <string name="reparto_finalizar">Finalizar Reparto</string>

    <!-- Strings related to Ventas -->
    <string name="venta_articulos">Articulos</string>
    <string name="venta_iva">I.V.A. $</string>
    <string name="venta_total_2">Total $</string>
    <string name="venta_total">Total</string>
    <string name="venta_pu">PU</string>
    <string name="venta_cantidad">Cantidad</string>
    <string name="venta_descuento">Descuento $</string>
    <string name="venta_entrega">Entrega $</string>
    <string name="venta_saldo">Saldo $</string>
    <string name="venta_cancelar">Cancelar</string>
    <string name="venta_finalizar">Finalizar</string>
    <string name="venta_error_vendedor_no_selec">Para finalizar una venta se debe seleccionar un vendedor!</string>


    <!-- Strings related to Lista Productos Ventas -->
    <string name="lista_prod_venta_articulos">Articulos en Carro:</string>
    <string name="lista_prod_venta_cantidad">Cantidad:</string>
    <string name="lista_prod_error_stock">Stock insuficiente. Cantidad max.: </string>
    <string name="lista_prod_error_stock_no_asociado">Stock no asociado al camion.</string>
    <string name="lista_prod_error_no_articulos">Seleccione al menos un artuculo!</string>
    <string name="lista_prod_error_cliente_sin_lista">Cliente no tiene lista de precios Asociada!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
